# Ferris-Torrent_taller1-fiuba

./: .gitignore  Cargo.toml  LICENSE  README.md  config.txt
ferris_torrent/: Cargo.toml  config.txt
ferris_torrent/src/: lib.rs  main.rs
ferris_torrent/src/torrent/: logger.rs  mod.rs  torrent_handler.rs
ferris_torrent/src/torrent/client/: block_handler.rs  entry_files_management.rs  medatada_analyzer.rs  mod.rs  pieces_assembling_handler.rs
ferris_torrent/src/torrent/client/peers_communication/: handler_communication.rs  local_peer_communicator.rs  msg_receiver.rs  msg_sender.rs
ferris_torrent/src/torrent/client/tracker_communication/: constants.rs  http_handler.rs  mod.rs
ferris_torrent/src/torrent/data/: config_file_data.rs  config_file_torrent.rs  mod.rs  peer_data_for_communication.rs  torrent_file_data.rs  torrent_status.rs  tracker_response_data.rs
ferris_torrent/src/torrent/port_testing/: listener_binder.rs
ferris_torrent/src/torrent/user_interface/: builder_app.rs  constants.rs  main_window.rs  mod.rs  style.css  ui_sender_handler.rs
ferris_torrent/temp/: README.md
ferris_torrent/tests/: integration_test.rs
ferris_torrent/torrents_for_test/: LibreOffice_7.3.4_Win_x86.msi.torrent  linuxmint-20.3-cinnamon-64bit.iso.torrent  ubuntu-22.04-desktop-amd64.iso.torrent
ferris_torrent/torrents_for_tracker/: debian-11.3.0-amd64-netinst.iso.torrent  gimp-2.10.32-setup-1.exe.torrent
ferris_tracker/: 404.html  Cargo.toml  README.md  config.txt  database.json  docs.html  index.html  stats.html  style.css  test.json
shared/: Cargo.toml
src/: lib.rs  (+1 more)
(+109 files in other folders)
