[package]
name = "fa_torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.1"
native-tls = "0.2.10"
rand = "0.8.4"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }
