[package]
name = "ferris_torrent"
version = "2.0.1"
edition = "2021"


[dependencies]
sha1 = "0.10.1"
native-tls = "0.2.10" #Esta posiblemente se remueva de aca despues
rand = "0.8.4"
log = "0.4.17"
pretty_env_logger = "0.4.0"
gtk = { version = "0.4.8", package = "gtk4" }

shared = {path = "../shared"}

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }
